@@ -32,13 +32,13 @@ class EntityListener extends BaseListener
     {
         if ($event->getCause() instanceof EntityDamageByEntityEvent !== true) {
             if ($event->getEntity() instanceof Player && $this->getPlugin()->isJailed(strtolower($event->getEntity()->getName())) !== false) {
-                if ($this->getPlugin()->getConfig()->get("disable-damage") !== false) {
+                if ($this->getPlugin()->getConfig()->get("disable-damage") !== false && $event->getEntity()->hasPermission("jail.override.restrictions") !== true) {
                     $event->setCancelled(true);
                 }
             }
         } else {
             if ($event->getDamager() instanceof Player && $this->getPlugin()->isJailed(strtolower($event->getDamager()->getName())) !== false) {
-                if ($this->getPlugin()->getConfig()->get("allow-attack") !== false) {
+                if ($this->getPlugin()->getConfig()->get("allow-attack") !== false && $event->getDamager()->hasPermission("jail.override.restrictions") !== true) {
                     $event->getDamager()->sendMessage($this->getPlugin()->getMessage("listener.not.allowed.do.this"));
                     $event->setCancelled(true);
                 }
