@@ -5,6 +5,7 @@ Changelog of Jail
 - Added prisonerinfo command, allows admins to obtain a prisoner's information
 - Prisoners' force jail TP now only occurs upon Δs(displacement change)
 - Item dropping by prisoners can now be disabled in config
+- Players w/ perm 'jail.override.restrictions' can ignore all jail restrictions
 - Fixed config key 'check-UUID' being ignored by the code
 
 Alpha0.3.4
